# jerichoos

./: .gitignore  .phantom  AI_DEVELOPMENT.md  BENCHMARKS.md  Cargo.toml  DEMO_GUIDE.md  LICENSE  Makefile.old_c_backup  README.md  aarch64-jericho.json  bench_arm64.sh  bench_x86.sh  build.rs  build_arm64.sh  demo_arm64.sh  demo_x86.sh  run_arm64.sh
.cargo/: config.toml  config_aarch64.toml  config_x86.toml
.claude/: settings.local.json
.github/workflows/: arm64-build-test.yml  x86-64-build-test.yml
boot/: boot.asm.old_backup
demos/wasm/: 01_add.wasm  01_add.wat  02_hello.wasm  02_hello.wat  03_syscall.wasm  03_syscall.wat  Makefile  QUICKSTART.md  README.md  compile.sh
docs/: AI_DEVELOPMENT.md  PROJECT_STATUS.md
src/: allocator.rs  benchmark.rs  capability.rs  gdt.rs  interrupts.rs  ipc.rs  main.rs  main_aarch64.rs  memory.rs  scheduler.rs  serial.rs  syscall.rs  task.rs  vga_buffer.rs  wasm_runtime.rs
src/arch/aarch64/: benchmark.rs  boot.S  exceptions.S  exceptions.rs  gic.rs  linker.ld  mmu.rs  mod.rs  scheduler.rs  task.rs  timer.rs  uart.rs
src/demos/: mod.rs  wasm_tests.rs
